After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669176 - Regression: atk-add-key-event-listener doesn't work
Regression: atk-add-key-event-listener doesn't work
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-02-01 14:18 UTC by Alejandro Piñeiro Iglesias (IRC: infapi00)
Modified: 2012-02-01 14:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test program (550 bytes, text/x-csrc)
2012-02-01 14:18 UTC, Alejandro Piñeiro Iglesias (IRC: infapi00)
Details

Description Alejandro Piñeiro Iglesias (IRC: infapi00) 2012-02-01 14:18:06 UTC
Created attachment 206572 [details]
Test program 

I noticed that atk_add_key_event_listener doesn't work with gtk applications. gtk from master.

I attached a test program. It just open a gtkwindow, and with that method properly implemented (and accessibility activated), each time you press/release a key, a message should appear (from command line)

After looking a little, it seems that it stopped to work after this gtk commit:

commit dbabff08466d265b5e229336d9f5db349b3b4397
Author: Benjamin Otte <otte@redhat.com>
Date:   Thu Jan 19 10:31:52 2012 +0100

    a11y: Invoke key snooper directly


NOTE: in order to test this, I removed that commit, and in order to get things compiling, this one:

commit 4b7ec2be8244a1641d71603ef6860eb7c41439b0
Author: Cosimo Cecchi <cosimoc@gnome.org>
Date:   Thu Jan 19 13:51:22 2012 -0500

    main: fix a compilation warning
Comment 1 Benjamin Otte (Company) 2012-02-01 14:50:30 UTC
commit c0ee68b7fe48a989bb02a06cc94fc13bddb39de3
Author: Benjamin Otte <otte@redhat.com>
Date:   Wed Feb 1 15:44:27 2012 +0100

    gtkmain: Invoke keysnoopers unconditionally